// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.schema.storage;

option go_package = "namespacelabs.dev/foundation/schema/storage";

import "schema/runtime.proto";
import "workspace/tasks/protocol/debug.proto";

message LogRef {
    string        package_name   = 1;
    string        container_name = 2;
    ContainerKind container_kind = 4;
    string        log_file       = 3;
    uint64        log_size       = 5;
}

message Command {
    repeated foundation.workspace.tasks.protocol.StoredTask action_log = 1;
    repeated Log attached_log = 2;
  
    message Log {
      string id = 1;
      bytes content = 2;
    }
  }