// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

import "schema/binary.proto";

message Test {
    // The package name (computed).
    string package_name = 1;

    string          name             = 2;
    Binary          driver           = 3;
    repeated string serversUnderTest = 4;
}